# amux

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  REMOTE.md  SECURITY.md  amux  amux-remote  amux-server.py  cc  cc-server.py  cmux  cmux-server.py  install.sh  llms.txt  package.json  pw-investigate.js  pw-invitations-ui.js  pw-invitations.js  pw-invite-final.js  pyproject.toml  robots.txt  sitemap.xml
.claude/: settings.json
.claude/commands/: amux-board.md  amux.md  chrome-cdp.md  orchestrate.md  playwright-auth.md  pw-test.md  record.md  review-session-log.md  smoke-test.md
.claude/rules/: css-mobile.md  single-file.md  sse-realtime.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: checks.yml  ios-metadata.yml  ios-setup-certs.yml  monitor-cloud.yml  pages.yml  release.yml
blog/: index.html
blog/agent-to-agent-communication/: index.html
blog/ai-coding-2025-landscape/: index.html
blog/building-agent-fleet/: index.html
blog/claude-4-agent-workflow/: index.html
cloud/: deploy-gateway.sh  setup-cloud.sh  setup.sh
compare/: index.html
demos/: index.html
desktop/: amux-desktop.swift  build-desktop.sh
docs/: app-store-listing.md  automations.md  calendar-sync.md  homepage-experiments.md  peek-parity.md  remote-support.md
electron/: main.js  package.json  test.js
faq/: index.html
for/: index.html
glossary/: index.html
guides/: index.html
ios/: project.yml
scripts/: generate-seo-pages.js  install-hooks.sh  seo-data.js  watchdog.py
site/: AEO_BACKLOG.md  CNAME  index.html  install.sh  llms.txt  robots.txt  site.js  sitemap.xml  style.css  video-sitemap.xml
skills/: aissue.md  amux-board.md  amux.md  chrome-cdp.md  review-session-log.md
solutions/: index.html
tests/: e2e-offline-sync.mjs  e2e-peek-dir.js  pw-investigate.js  pw-offline-debug.js  pw-offline-test.js  pw-open-recording.js  pw-recordings-e2e.js  pw-recordings-viewer.js  test_auth.py  test_cors.py  test_filesystem_restrictions.py  test_path_traversal.py  test_peek_parity.py  test_send_keys.py  test_steering_delivery.py
use-cases/: index.html
(+551 files in other folders)
